docs(readme): generate

--- a/.verb.md
+++ b/.verb.md
@@ -10,7 +10,8 @@
 [![dependency status][david-img]][david-url]
 [![paypal donate][paypalme-img]][paypalme-url] 
 
-{%= include('highlight') %}
+_You might also be interested in [dush-no-chaining][], [dush-methods][] and [dush-tap-report][], 
+a plugins for [dush][] microscopic event emitter with simple & powerful plugin system._
 
 ## Table of Contents
 <!-- toc -->
