docs(readme): add some notes and highlights

--- a/.verb.md
+++ b/.verb.md
@@ -13,6 +13,17 @@
 _You might also be interested in [dush-no-chaining][], [dush-methods][] and [dush-tap-report][], 
 a plugins for [dush][] microscopic event emitter with simple & powerful plugin system._
 
+## Highlights :sparkles:
+- **Small:** Really small and lightweight
+- **Easy:** Regex-based routing, for simple cases
+- **Extensible:** Can use [path-match][] under the hood
+- **Isomorphic:** For the browser or Node.js >= v0.10
+- **Customize:** Control over route handler's arguments
+- **Great:** Sane and good defaults, but easy to customize
+- **Simple:** Based on awesome event system like [dush][]
+- **Stable:** Well tested, with [400% coverage](./package.json#L55-L61)
+- **Modern:** Plays well with [nanomorph][], [bel][] or any other thing
+
 ## Table of Contents
 <!-- toc -->
 
@@ -38,6 +49,90 @@ const {%= varname %} = require('{%= name %}')
 
 ## API
 {%= apidocs('index.js') %}
+
+## Notes
+
+### About "on route"
+
+You can customize everything. By default, we call the route handler with single "context" object
+which contains `.route`, `.pathname`, `.params` and `.state` properties.
+
+- `route` - the route of the handler, e.g. `/user/:id`
+- `pathname` - the incoming url - 1st argument of `.navigate` method, e.g. `/user/charlike`
+- `state` - optional "state" for the page - 2nd argument of `.navigate` method, e.g. `{ foo: 1 }`
+- `params` - object, containing the params of the route, e.g. `{ id: 'charlike' }`
+
+But instead of this you may want to pass more additional arguments to route handler or include 
+only few of these above. To do this you can `off` the default `.on('route')` logic and provide
+a new logic. The listener of `route` event will be passed with `(handler, context, el)` signature.
+Where `handler` is the route handler function, `context` is the above context object, and `el` can be
+the "previous" returned value of the handler call (it is useful for diffing).
+
+In above API docs have existing example, but let's try it again.
+
+```js
+// remove the defafult
+app.off('route')
+```
+
+Okey, let's say we want our route handlers to have `(params, actions)` signature.
+We can get the first from the "context" object, but what about "actions". Let's think
+ of the route handler as _"view"_, so we want to pass some actions to be done on some scenario.
+
+> _**Tip:** This is the perfect place to plug in a virtual or real dom diffing algorithm! You
+definitely should try to use [nanomorph][] here to see the magic! :)_ 
+
+```js
+const actions = {
+  hi: (name) => alert('hi ' + name)
+}
+
+app.on('route', (handler, context) => {
+  return handler(context.params, actions)
+})
+```
+
+
+Now, let's define our simple view with [bel][], a simple DOM builder using tagged template strings.
+
+```js
+const html = require('bel')
+
+app.addRoute('/hello/:name', (params, actions) => {
+  return html`<div>
+    <h1>Hello ${params.name}</h1>
+    <button onclick=${() => actions.hi(params.name)}>Click me to alert you</button>
+  </div>`
+})
+```
+
+This view just outputs one heading and a button, which when is clicked will say "hi" to different persons,
+based on the passed url, which in our case will be fired with `.navigate` method.
+
+```js
+const res = app.navigate('/hello/charlike')
+
+console.log(res) // => DOM element
+console.log(res.toString())
+// =>
+// <div>
+//   <h1>Hello charlike</h1>
+//   <button>Click me to alert you</button>
+// </div>
+```
+
+And because `.navigate` method returns what is returned value from the matched route, we can
+easy get the rendered page.
+
+### About routing
+
+By default we use _really simple_ approach for covering most common and simple cases. It is similar
+to what we see in Express app's routing, where `:name` is a placeholder for some param.
+
+But because everything is some simple, small and pluggable, you can create another plugin
+that provide a different `.createRoute` method, for example using [path-match][]. There's 
+only few things that you should follow and they can be seen in the source code, 
+it is pretty small and easy to understand.
 
 {% if (verb.related && verb.related.list && verb.related.list.length) { %}
 ## Related
