docs(update): regenerate docs

--- a/.verb.md
+++ b/.verb.md
@@ -23,6 +23,7 @@ a plugins for [dush][] microscopic event emitter with simple & powerful plugin s
 - **Simple:** Based on awesome event system like [dush][]
 - **Stable:** Well tested, with [400% coverage](./package.json#L55-L61)
 - **Modern:** Plays well with [nanomorph][], [bel][] or any other thing
+- **Allows:** Adding multiple handlers on same route
 
 ## Table of Contents
 <!-- toc -->
