fix(readme): update badges, move to CircleCI!

--- a/.verb.md
+++ b/.verb.md
@@ -4,7 +4,7 @@
 
 [![code climate][codeclimate-img]][codeclimate-url] 
 [![code style][standard-img]][standard-url] 
-[![linux build][travis-img]][travis-url] 
+[![linux build][circle-img]][circle-url] 
 [![windows build][appveyor-img]][appveyor-url] 
 [![code coverage][coverage-img]][coverage-url] 
 [![dependency status][david-img]][david-url]
@@ -193,8 +193,8 @@ _Project scaffolded using [charlike][] cli._
 [codeclimate-url]: https://codeclimate.com/github/{%= repository %}
 [codeclimate-img]: https://img.shields.io/codeclimate/github/{%= repository %}.svg
 
-[travis-url]: https://travis-ci.org/{%= repository %}
-[travis-img]: https://img.shields.io/travis/{%= repository %}/master.svg?label=linux
+[circle-url]: https://circleci.com/gh/{%= repository %}
+[circle-img]: https://img.shields.io/circleci/project/github/{%= repository %}/master.svg?label=linux
 
 [appveyor-url]: https://ci.appveyor.com/project/tunnckoCore/{%= name %}
 [appveyor-img]: https://img.shields.io/appveyor/ci/tunnckoCore/{%= name %}/master.svg?label=windows
