--- a/.verb.md
+++ b/.verb.md
@@ -226,7 +226,7 @@ _Project scaffolded using [charlike][] cli._
 
 {%= reflinks(verb.reflinks) %}
 
-[license-url]: https://www.npmjs.com/package/{%= name %}
+[license-url]: https://github.com/{%= repository %}/blob/master/LICENSE
 [license-img]: https://img.shields.io/npm/l/{%= name %}.svg
 
 [downloads-url]: https://www.npmjs.com/package/{%= name %}
