--- a/.verb.md
+++ b/.verb.md
@@ -38,7 +38,7 @@ by [CodeCov][codecov-coverage-url] and [nyc (istanbul)][nyc-istanbul-url].
 [![code coverage][codecov-img]][codecov-url] 
 [![nyc coverage][istanbulcov-img]][istanbulcov-url] 
 
-## Support 🤝
+## Support :clap:
 
 > If you have any problems, consider opening [an issue][open-issue-url],
 ping me on twitter ([@tunnckoCore][tunnckocore-twitter-url]),
@@ -250,7 +250,7 @@ _Project scaffolded using [charlike][] cli._
 [daviddm-devdeps-url]: https://david-dm.org/{%= repository %}?type=dev
 [daviddm-devdeps-img]: https://img.shields.io/david/dev/{%= repository %}.svg
 
-[ghtag-url]: https://github.com/{%= repository %}/releases/tag/v{%= version %}
+[ghtag-url]: https://github.com/{%= repository %}/tags
 [ghtag-img]: https://img.shields.io/github/tag/{%= repository %}.svg?label=github%20tag
 
 [npmv-url]: https://www.npmjs.com/package/{%= name %}
